--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,17 @@
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
-    "typeRoots": ["node_modules/@types", "www/js/types"],
+    "typeRoots": [
+      "node_modules/@types",
+      "www/js/types"
+    ]
   },
-  "include": ["www/**/*"],
-  "exclude": ["**/node_modules/*", "**/dist/*"],
+  "include": [
+    "www/**/*"
+  ],
+  "exclude": [
+    "**/node_modules/*",
+    "**/dist/*"
+  ],
+  "extends": "expo/tsconfig.base"
 }
